<resources>
    <string name="app_name">ColorMyViews</string>

    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>

    <string name="how_to_play">How to Play:</string>
    
    <string name="tap_boxes_and_buttons">Tap on the screen, boxes and buttons.</string>
    
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>

    <string name="reset">Reset</string>

</resources>
